--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .box1{
     width: 50%;
@@ -28,4 +29,16 @@ section{
 .top-banner{
     background-image: url(resource/top-banner.png);
     background-repeat: no-repeat;
+}
+.download-button{
+    text-decoration:none;
+    background-image: linear-gradient(brown, red );
+    color: white;
+    font-weight: 700;
+    padding: 10px 40px; 
+}
+.secend-banner{
+    background-image: url(resource/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right ;
 }
